Fixed wrapping of `stat-card-list` elements

--- a/src/app/static/css/styles.css
+++ b/src/app/static/css/styles.css
@@ -201,8 +201,8 @@ button.secondary:focus {
 #stats .stat-card-list {
     margin: 2rem;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 2rem;
 }
 
